Refactor state initialization in tests: remove player list parameter from AbandonedShipState, EndState, EpidemicState, PlanetsState, StardustState, and ValidationState constructors for improved clarity and consistency